--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,9 @@ android {
 }
 
 dependencies {
+    compile project(':realm')
+    compile project(':aws-sdk-react-native-lambda')
+    compile project(':aws-sdk-react-native-core')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
