--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,9 @@
 rootProject.name = 'CARFIT'
+include ':realm'
+project(':realm').projectDir = new File(rootProject.projectDir, '../node_modules/realm/android')
+include ':aws-sdk-react-native-lambda'
+project(':aws-sdk-react-native-lambda').projectDir = new File(rootProject.projectDir, '../node_modules/aws-sdk-react-native-lambda/android')
+include ':aws-sdk-react-native-core'
+project(':aws-sdk-react-native-core').projectDir = new File(rootProject.projectDir, '../node_modules/aws-sdk-react-native-core/android')
 
 include ':app'
