--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,19 +1,19 @@
 target 'CARFIT' do
     source 'https://github.com/CocoaPods/Specs.git'
-    pod 'AWSCore'
+#    pod 'AWSCore'
 #    pod 'AWSAutoScaling'
 #    pod 'AWSCloudWatch'
 #    pod 'AWSDynamoDB'
 #    pod 'AWSEC2'
 #    pod 'AWSElasticLoadBalancing'
 #    pod 'AWSKinesis'
-    pod 'AWSLambda'
+#    pod 'AWSLambda'
 #    pod 'AWSMachineLearning'
-    pod 'AWSMobileAnalytics'
-    pod 'AWSS3'
+#    pod 'AWSMobileAnalytics'
+#    pod 'AWSS3'
 #    pod 'AWSSES'
 #    pod 'AWSSimpleDB'
 #    pod 'AWSSNS'
 #    pod 'AWSSQS'
-    pod 'AWSCognito'
+#    pod 'AWSCognito'
 end
