Podfile adjustmentsto add AWS SDKs for co-dependencies.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,19 +1,28 @@
+source 'https://github.com/CocoaPods/Specs.git'
+
+platform :ios, '8.0'
+
+use_frameworks!
+
 target 'CARFIT' do
-    source 'https://github.com/CocoaPods/Specs.git'
-#    pod 'AWSCore'
+     pod 'AWSCore'
+     pod 'AWSAPIGateway'
+     pod 'AWSCognito'
+     pod 'AWSCognitoIdentityProvider'
+     pod 'AWSS3'
+#    pod 'AWSLambda'
 #    pod 'AWSAutoScaling'
 #    pod 'AWSCloudWatch'
 #    pod 'AWSDynamoDB'
 #    pod 'AWSEC2'
 #    pod 'AWSElasticLoadBalancing'
 #    pod 'AWSKinesis'
-#    pod 'AWSLambda'
 #    pod 'AWSMachineLearning'
 #    pod 'AWSMobileAnalytics'
-#    pod 'AWSS3'
 #    pod 'AWSSES'
 #    pod 'AWSSimpleDB'
 #    pod 'AWSSNS'
 #    pod 'AWSSQS'
-#    pod 'AWSCognito'
+#    pod 'Fabric'
+#    pod 'Crashlytics'
 end
