Added Realm to Podfile for iOS.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,7 @@ target 'CARFIT' do
      pod 'AWSCognito'
      pod 'AWSCognitoIdentityProvider'
      pod 'AWSS3'
+     pod 'Realm'
 #    pod 'AWSLambda'
 #    pod 'AWSAutoScaling'
 #    pod 'AWSCloudWatch'
