--- a/package.json
+++ b/package.json
@@ -1,66 +1,34 @@
 {
 	"name": "CARFIT",
 	"version": "0.0.1",
-	"author": "Brian McBride",
-	"description": "CarFit React Native App",
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"bundle:ios": "node ./node_modules/react-native/local-cli/cli.js bundle --platform ios --entry-file index.ios.js --bundle-output ios/CARFIT/main.jsbundle --dev=false --minify --verbose",
-		"test": "jest",
-		"test:watch": "jest --watch",
-		"lint": "eslint src test",
-		"coverage": "rimraf coverage && jest --coverage"
+		"test": "jest"
 	},
 	"rnpm": {
 		"assets": [ "./fonts" ]
 	},
 	"dependencies": {
-		"aws-sdk-react-native-core": "./external/aws-sdk-react-native-core-0.0.2.tgz",
 		"bluebird": "^3.4.6",
-		"es6-symbol": "^3.1.0",
-		"event-emitter": "^0.3.4",
 		"immutable": "^3.8.1",
 		"lodash": "^4.17.2",
 		"moment": "^2.17.1",
 		"multiplier": "^0.1.0",
-		"native-base": "^0.5.20",
-		"react": "15.4.2",
-		"react-dom": "~15.4.1",
+		"react": "~15.4.0-rc.4",
 		"react-native": "0.40.0",
-		"react-native-swiper": "^1.5.4",
-		"react-native-vector-icons": "^4.0.0",
 		"react-redux": "^5.0.1",
-		"realm": "^0.15.0",
 		"redux": "^3.6.0",
-		"redux-logger": "^2.7.4",
-		"redux-loop": "^2.2.2",
 		"redux-observable": "^0.12.2",
 		"redux-promise": "^0.5.3",
-		"redux-thunk": "^2.1.0",
 		"rxjs": "^5.0.1",
 		"standard-http-error": "^2.0.0"
 	},
 	"devDependencies": {
-		"babel-core": "^6.20.0",
-		"babel-eslint": "^7.1.1",
 		"babel-jest": "18.0.0",
-		"babel-polyfill": "^6.20.0",
 		"babel-preset-react-native": "1.9.1",
-		"babel-preset-stage-0": "^6.16.0",
-		"babel-register": "^6.18.0",
-		"enzyme": "^2.6.0",
-		"eslint": "^3.12.2",
-		"eslint-plugin-babel": "^4.0.0",
-		"eslint-plugin-react": "^6.8.0",
-		"fetch-mock": "^5.6.2",
-		"istanbul": "1.0.0-alpha.2",
 		"jest": "18.1.0",
-		"jest-react-native": "~18.0.0",
-		"react-addons-test-utils": "~15.4.1",
-		"react-native-mock": "~0.2.9",
-		"react-test-renderer": "^15.4.1",
-		"rimraf": "^2.5.4"
+		"react-test-renderer": "~15.4.0-rc.4"
 	},
 	"jest": {
 		"preset": "react-native"
