--- a/package.json
+++ b/package.json
@@ -1,36 +1,53 @@
 {
-	"name": "CARFIT",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"rnpm": {
-		"assets": [ "./fonts" ]
-	},
-	"dependencies": {
-		"bluebird": "^3.4.6",
-		"immutable": "^3.8.1",
-		"lodash": "^4.17.2",
-		"moment": "^2.17.1",
-		"multiplier": "^0.1.0",
-		"react": "~15.4.0-rc.4",
-		"react-native": "0.40.0",
-		"react-redux": "^5.0.1",
-		"redux": "^3.6.0",
-		"redux-observable": "^0.12.2",
-		"redux-promise": "^0.5.3",
-		"rxjs": "^5.0.1",
-		"standard-http-error": "^2.0.0"
-	},
-	"devDependencies": {
-		"babel-jest": "18.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "18.1.0",
-		"react-test-renderer": "~15.4.0-rc.4"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "CARFIT",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "rnpm": {
+    "assets": [
+      "./fonts"
+    ]
+  },
+  "dependencies": {
+    "color": "^1.0.3",
+    "bluebird": "^3.4.6",
+    "immutable": "^3.8.1",
+    "lodash": "^4.17.2",
+    "moment": "^2.17.1",
+    "multiplier": "^0.1.0",
+    "native-base": "0.5.22",
+    "react": "~15.4.0-rc.4",
+    "react-native": "0.40.0",
+    "react-native-code-push": "1.17.0-beta",
+    "react-native-easy-grid": "0.1.8",
+    "react-native-modalbox": "^1.3.8",
+    "react-native-navigation-redux-helpers": "^0.5.0",
+    "react-native-vector-icons": "^4.0.0",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-loop": "^2.2.2",
+    "redux-observable": "^0.13.0",
+    "redux-persist": "^4.1.0",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
+    "remote-redux-devtools": "^0.5.7",
+    "remote-redux-devtools-on-debugger": "^0.7.0",
+    "rxjs": "^5.0.1",
+    "standard-http-error": "^2.0.0"
+  },
+  "devDependencies": {
+    "babel-jest": "18.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "jest": "18.1.0",
+    "react-test-renderer": "~15.4.0-rc.4",
+    "remote-redux-devtools-on-debugger": "^0.4.6",
+    "remotedev-server": "^0.3.0-beta-3"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
