--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "rnpm": {
     "assets": [
-      "./fonts"
+      "fonts"
     ]
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "react-native-easy-grid": "0.1.8",
     "react-native-modalbox": "^1.3.8",
     "react-native-navigation-redux-helpers": "^0.5.0",
+    "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
