--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "color": "^1.0.3",
     "bluebird": "^3.4.6",
+    "es6-symbol": "^3.1.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
