--- a/ios/CARFIT/Info.plist
+++ b/ios/CARFIT/Info.plist
@@ -20,8 +20,12 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CFPAWSAPIGatewayURL</key>
+	<string>https://tnexnmzch3.execute-api.us-east-1.amazonaws.com/dev</string>
 	<key>CodePushDeploymentKey</key>
 	<string>deployment-key-here</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -35,8 +39,8 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>CarFit always uses location service</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>poppins_bold.ttf</string>
@@ -81,5 +85,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>bluetooth-central</string>
+	</array>
 </dict>
 </plist>
