--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     ]
   },
   "dependencies": {
-    "color": "^1.0.3",
     "bluebird": "^3.4.6",
+    "color": "^1.0.3",
     "es6-symbol": "^3.1.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.2",
@@ -24,6 +24,7 @@
     "react-native": "0.40.0",
     "react-native-code-push": "1.17.0-beta",
     "react-native-easy-grid": "0.1.8",
+    "react-native-lock": "^0.5.0",
     "react-native-modalbox": "^1.3.8",
     "react-native-navigation-redux-helpers": "^0.5.0",
     "react-native-swiper": "^1.5.4",
