--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "remote-redux-devtools": "^0.5.7",
     "remote-redux-devtools-on-debugger": "^0.7.0",
     "rxjs": "^5.0.1",
-    "standard-http-error": "^2.0.0"
+    "standard-http-error": "^2.0.0",
+    "aws-sdk-react-native-core": "./aws/aws-sdk-react-native-core-0.0.1.tgz"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
