--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     ]
   },
   "dependencies": {
+    "auth0-js": "^8.3.0",
     "aws-sdk-react-native-core": "./aws/aws-sdk-react-native-core-0.0.1.tgz",
     "bluebird": "^3.4.6",
     "color": "^1.0.3",
