--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "native-base": "0.5.22",
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
+    "react-native-auth0": "^1.0.0-beta.1",
     "react-native-code-push": "1.17.0-beta",
     "react-native-easy-grid": "0.1.8",
     "react-native-lock": "^0.5.0",
