--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,13 +89,16 @@ android {
 
     defaultConfig {
         applicationId "com.carfit"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+    }
+    dexOptions {
+        jumboMode true
     }
     splits {
         abi {
@@ -145,6 +148,8 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.2.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':connected_watch_service_v1-release')
+    compile project(':dfu-release')
 }
 
 // Run this once to be able to run the application with BUCK
