--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-native-lock": "^0.5.0",
     "react-native-modalbox": "^1.3.8",
     "react-native-navigation-redux-helpers": "^0.5.0",
+    "react-native-spinner": "0.0.3",
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.1",
+    "react-redux-spinner": "^0.5.0",
     "redux": "^3.6.0",
     "redux-form": "^6.5.0",
     "redux-logger": "^2.7.4",
