--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,7 @@ platform :ios, '8.3'
 
 target 'CARFIT' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-use_frameworks!
+# use_frameworks!
 
   # Pods for CARFIT
   pod 'CarFitiOSSDK'# , :path => '~mcclen/Developer/sdk.ios.car.fit'
