--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,9 @@ target 'CARFIT' do
   pod 'Lock/TouchID'
   pod 'Lock/SMS'
   pod 'Lock/Email'
+  pod 'BuddyBuildSDK'
+  pod 'Fabric'
+  pod 'Crashlytics'
   target 'CARFITTests' do
     inherit! :search_paths
     # Pods for testing
