--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.40.0",
     "react-native-code-push": "1.17.0-beta",
     "react-native-easy-grid": "0.1.8",
+    "react-native-htmlview": "^0.7.2",
     "react-native-lock": "^0.5.0",
     "react-native-modalbox": "^1.3.8",
     "react-native-navigation-redux-helpers": "^0.5.0",
