--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-lock": "^0.5.0",
     "react-native-modalbox": "^1.3.8",
     "react-native-navigation-redux-helpers": "^0.5.0",
+    "react-native-simple-modal": "^5.0.0",
     "react-native-spinner": "0.0.3",
     "react-native-swiper": "^1.5.4",
     "react-native-timer-mixin": "^0.11.0",
