--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-easy-grid": "0.1.8",
     "react-native-highcharts": "^0.2.0",
     "react-native-htmlview": "^0.7.2",
+    "react-native-loading-spinner-overlay": "^0.4.2",
     "react-native-lock": "^0.5.0",
     "react-native-modalbox": "^1.3.8",
     "react-native-navigation-redux-helpers": "^0.5.0",
