--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "remote-redux-devtools": "^0.5.7",
     "remote-redux-devtools-on-debugger": "^0.7.0",
     "rxjs": "^5.0.1",
-    "standard-http-error": "^2.0.0"
+    "standard-http-error": "^2.0.0",
+    "url-parse": "^1.1.8"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
