--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   "devDependencies": {
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
-    "jest": "18.1.0",
+    "jest": "^18.1.0",
     "react-test-renderer": "~15.4.0-rc.4",
     "remote-redux-devtools-on-debugger": "^0.4.6",
     "remotedev-server": "^0.3.0-beta-3"
