--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-camera')
     compile project(':react-native-lock')
     compile project(':react-native-vector-icons')
     compile project(':react-native-code-push')
