--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "~15.4.0-rc.4",
     "react-addons-create-fragment": "^15.4.2",
     "react-native": "0.40.0",
+    "react-native-camera": "^0.6.0",
     "react-native-code-push": "1.17.0-beta",
     "react-native-easy-grid": "0.1.8",
     "react-native-highcharts": "^0.2.0",
