--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "react-native-htmlview": "^0.7.2",
     "react-native-loading-spinner-overlay": "^0.4.2",
     "react-native-lock": "^0.5.0",
+    "react-native-modal-picker": "0.0.16",
     "react-native-modalbox": "^1.3.8",
     "react-native-navigation-redux-helpers": "^0.5.0",
     "react-native-simple-modal": "^5.0.0",
+    "react-native-simple-picker": "^1.2.1",
     "react-native-spinner": "0.0.3",
     "react-native-swiper": "^1.5.4",
     "react-native-timer-mixin": "^0.11.0",
