--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aws-sdk-react-native-lambda": "./aws/aws-sdk-react-native-lambda-0.0.1.tar",
     "bluebird": "^3.4.6",
     "color": "^1.0.3",
+    "d3": "^4.8.0",
     "es6-symbol": "^3.1.0",
     "graphql": "^0.9.1",
     "highcharts": "^5.0.9",
@@ -28,6 +29,7 @@
     "native-base": "0.5.22",
     "react": "~15.4.0-rc.4",
     "react-addons-create-fragment": "^15.4.2",
+    "react-move": "^1.0.1",
     "react-native": "0.40.0",
     "react-native-camera": "^0.6.0",
     "react-native-code-push": "1.17.0-beta",
