Convert trips to local units

--- a/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/CARFIT.xcscheme
+++ b/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/CARFIT.xcscheme
@@ -99,6 +99,12 @@
             ReferencedContainer = "container:CARFIT.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-AppleLocale en_FR"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
