--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "remotedev-debugger"
   },
   "rnpm": {
     "assets": [
@@ -71,7 +72,8 @@
     "babel-preset-react-native": "1.9.1",
     "jest": "^18.1.0",
     "react-test-renderer": "~15.4.0-rc.4",
-    "remote-redux-devtools-on-debugger": "^0.4.6",
+    "remote-redux-devtools": "^0.5.7",
+    "remote-redux-devtools-on-debugger": "^0.7.0",
     "remotedev-server": "^0.3.0-beta-3"
   },
   "jest": {
