--- a/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/CARFIT.xcscheme
+++ b/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/CARFIT.xcscheme
@@ -102,7 +102,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-AppleLocale en_FR"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
       <AdditionalOptions>
