--- a/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/CARFIT GPS Simulation .xcscheme
+++ b/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/CARFIT GPS Simulation .xcscheme
@@ -97,7 +97,9 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      language = "fr"
+      region = "FR">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
