--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'CARFIT'
+include ':aws-sdk-react-native-lambda'
+project(':aws-sdk-react-native-lambda').projectDir = new File(rootProject.projectDir, '../node_modules/aws-sdk-react-native-lambda/android')
+include ':aws-sdk-react-native-core'
+project(':aws-sdk-react-native-core').projectDir = new File(rootProject.projectDir, '../node_modules/aws-sdk-react-native-core/android')
 include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
 include ':react-native-lock', ':dfu-release', ':connected_watch_service_v1-release'
