--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "dependencies": {
+    "art": "^0.10.1",
     "auth0-js": "^8.0.0",
     "auth0-react-native": "0.0.4",
     "aws-sdk-react-native-core": "./aws/Core/aws-sdk-react-native-core-0.0.1.tgz",
@@ -20,6 +21,7 @@
     "bluebird": "^3.4.6",
     "color": "^1.0.3",
     "d3": "^4.8.0",
+    "d3-shape": "^1.0.6",
     "es6-symbol": "^3.1.0",
     "graphql": "^0.9.1",
     "highcharts": "^5.0.9",
