--- a/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/GPS Simulation.xcscheme
+++ b/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/GPS Simulation.xcscheme
@@ -97,8 +97,7 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES"
-      region = "FR">
+      allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
