--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-addons-create-fragment": "^15.4.2",
     "react-move": "^1.0.1",
     "react-native": "0.40.0",
+    "react-native-bluetooth-state": "^2.0.0",
     "react-native-camera": "^0.6.0",
     "react-native-code-push": "1.17.0-beta",
     "react-native-device": "^1.0.1",
