--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.17.1",
     "multiplier": "^0.1.0",
     "native-base": "0.5.22",
+    "options": "0.0.6",
     "react": "~15.4.0-rc.4",
     "react-addons-create-fragment": "^15.4.2",
     "react-move": "^1.0.1",
