--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "color": "^1.0.3",
     "d3": "^4.8.0",
     "d3-shape": "^1.0.6",
+    "destroy": "^1.0.4",
     "es6-symbol": "^3.1.0",
     "graphql": "^0.9.1",
     "highcharts": "^5.0.9",
