--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphql": "^0.9.1",
     "highcharts": "^5.0.9",
     "immutable": "^3.8.1",
+    "jsonfile": "^3.0.0",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "multiplier": "^0.1.0",
