--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3-shape": "^1.0.6",
     "destroy": "^1.0.4",
     "es6-symbol": "^3.1.0",
+    "figures": "^2.0.0",
     "graphql": "^0.9.1",
     "highcharts": "^5.0.9",
     "immutable": "^3.8.1",
