--- a/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/CARFIT.xcscheme
+++ b/ios/CARFIT.xcodeproj/xcshareddata/xcschemes/CARFIT.xcscheme
@@ -89,7 +89,7 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
-      region = "US">
+      region = "FR">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
