--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "postinstall": "remotedev-debugger"
+    "postinstall": "./auth0-dependency-fix.rb && remotedev-debugger"
   },
   "rnpm": {
     "assets": [
