--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "d3-shape": "^1.0.6",
     "destroy": "^1.0.4",
     "es6-symbol": "^3.1.0",
+    "exit-hook": "^1.1.1",
     "figures": "^2.0.0",
     "graphql": "^0.9.1",
     "highcharts": "^5.0.9",
