--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,7 +8,7 @@ target 'CARFIT' do
 use_frameworks!
 
   # Pods for CARFIT
-  pod 'CarFitiOSSDK' #, :path => '../../sdk.ios.car.fit'
+  pod 'CarFitiOSSDK' #, :git => 'https://bitbucket.org/carfit_platform/sdk.ios.car.fit.git', :branch => 'oad'
   pod 'Lock', '~> 1.26'
   pod 'Lock/TouchID'
   pod 'Lock/SMS'
